--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 						// Create an array of typing text
 						const typingTexts = [
 						'Business Data Analyst  ',
-						'Content Creator  ',
+						'SAP TS410 Business Process Integration Certified  ',
 						'   ',
 						];
 
