--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Anand Kumar Bhagat</span></p>
 										<p><span class="title-s">Job Role: </span> <span>Business Data Analyst</span></p>
-										<p><span class="title-s">Experience: </span> <span>2 Years 2 Months</span></p>
+										<p><span class="title-s">Experience: </span> <span>3+ Years</span></p>
 										<p><span class="title-s">Address: </span> <span>Beaumont, Texas</span></p>
 									  </div>
 									</div>
