--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 						<br>
 						<br>
 			            <h2>"Turning Data into insights."</h2>
-						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
+						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 3 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://www.instagram.com/traveller_arrives" class="btn btn-primary py-3 px-4">Instagram</a> 
 							<a href="https://github.com/Anandlamar" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
@@ -229,13 +229,13 @@
 
 								<div class="skill-mf">
 									<p class="title-s">Skills</p>
-									<span>SQL</span> <span class="pull-right">95%</span>
+									<span>SAP S/4HANA</span> <span class="pull-right">95%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0"
 											aria-valuemax="100"></div>
 									</div>
 									
-									<span>PYTHON</span> <span class="pull-right">85%</span>
+									<span>SQL</span> <span class="pull-right">85%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
 											aria-valuemax="100"></div>
@@ -253,7 +253,7 @@
 											aria-valuemax="100"></div>
 									</div>
 									
-									<span>Machine Learning</span> <span class="pull-right">80%</span>
+									<span>PYTHON</span> <span class="pull-right">80%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
 											aria-valuemax="100"></div>
