--- a/index.html
+++ b/index.html
@@ -340,13 +340,16 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2021-2023</span>
-						<h2>Junior System Analyst</h2>
+						<h2>Junior Data Analyst</h2>
 						<span class="position">Meta Link</span>
 						<p class="mt-4">Meta Link Pvt. Ltd. is a leading IT solutions provider specializing in system development, maintenance, and data analytics for businesses in Nepal. 
 							<ul>
-								<li>Led data analytics techniques, including predictive modeling, to boost project completion by 20% and ensure timely delivery.</li>
-								<li>Utilized Python and SQL for comprehensive data analysis, system optimization, and troubleshooting while working closely with cross-functional teams to gather requirements and enhance system features.</li>
-								<li>Developed user guides, system procedure manuals, and documentation that improved clarity and reduced user errors by 25%.</li>
+								<li>Accelerated project completion by 20% through predictive modeling and data analytics techniques, optimizing project
+timelines and operational efficiency.</li>
+								<li>Leveraged Python and SQL for comprehensive data analysis, providing technical support, troubleshooting, and collaborating
+with cross-functional teams to design system enhancements.</li>
+								<li>Streamlined documentation processes by creating system user guides, procedure manuals, and user guidelines, resulting in a
+25% reduction in user errors.</li>
 							</ul>
 						</p>
 					</div>
