--- a/index.html
+++ b/index.html
@@ -600,6 +600,19 @@ with cross-functional teams to design system enhancements.</li>
 		</div>
 	  </section>
 	</div>
+	<!-- Cloud Analytics Project -->
+<div class="col-md-4 d-flex ftco-animate">
+  <div class="blog-entry">
+    <a href="https://github.com/anandkbhagat/my-projects/tree/main/cloud-analytics-project" class="block-20 zoom-effect" style="background-image: url('images/cloud_analytics.png');"></a>
+    <div class="text mt-3 d-block">
+      <h3 class="heading">
+        <a href="https://github.com/anandkbhagat/my-projects/tree/main/cloud-analytics-project">Cloud Analytics Project</a>
+      </h3>
+      <p>This Cloud Analytics project uses cloud technologies (e.g., AWS, GCP) to analyze large datasets and visualize them using Power BI. The project includes various insights into cloud-based data analysis. Click to access the full project details, including reports and presentation slides, on GitHub.</p>
+    </div>
+  </div>
+</div>
+
   </section>
   
 		  
