--- a/index.html
+++ b/index.html
@@ -600,19 +600,19 @@ with cross-functional teams to design system enhancements.</li>
 		</div>
 	  </section>
 	</div>
-	<!-- SAP Cloud Analytics - ERP Simulation & Data Analysis -->
+	<!-- Power BI Project: SAP Cloud Analytics - ERP Simulation & Data Analysis -->
 <div class="col-md-4 d-flex ftco-animate">
   <div class="blog-entry">
-    <a href="https://github.com/anandkbhagat/my-projects/tree/main/sap-cloud-analytics-project" class="block-20 zoom-effect" style="background-image: url('images/cloud_analytics.png');"></a>
+    <a href="URL_OF_YOUR_PDF" class="block-20 zoom-effect" style="background-image: url('images/cloud_analytics.png');" target="_blank"></a>
     <div class="text mt-3 d-block">
       <h3 class="heading">
-        <a href="https://github.com/anandkbhagat/my-projects/tree/main/sap-cloud-analytics-project">SAP Cloud Analytics - ERP Simulation & Data Analysis</a>
+        <a href="URL_OF_YOUR_PDF" target="_blank">SAP Cloud Analytics - ERP Simulation & Data Analysis</a>
       </h3>
-      <p>Conducted comprehensive ERP data analysis using SAP Cloud Analytics for product sales and revenue management. Developed interactive dashboards with actionable insights to optimize decision-making. Key achievements include sales pattern analysis, forecasting, and anomaly detection using Benford's Law.</p>
-      <p><strong>Tools Used:</strong> SAP Cloud Analytics, Benford Analysis, ERP Simulation</p>
+      <p>Click here to view the project details and analysis.</p>
     </div>
   </div>
 </div>
+
 
 
   </section>
