--- a/index.html
+++ b/index.html
@@ -603,15 +603,16 @@ with cross-functional teams to design system enhancements.</li>
 	<!-- Power BI Project: SAP Cloud Analytics - ERP Simulation & Data Analysis -->
 <div class="col-md-4 d-flex ftco-animate">
   <div class="blog-entry">
-    <a href="URL_OF_YOUR_PDF" class="block-20 zoom-effect" style="background-image: url('images/cloud_analytics.png');" target="_blank"></a>
+    <a href="images/Cloudanalytics.docx" class="block-20 zoom-effect" style="background-image: url('images/sap.png');" target="_blank"></a>
     <div class="text mt-3 d-block">
       <h3 class="heading">
-        <a href="URL_OF_YOUR_PDF" target="_blank">SAP Cloud Analytics - ERP Simulation & Data Analysis</a>
+        <a href="images/Cloudanalytics.docx" target="_blank">SAP Cloud Analytics - ERP Simulation & Data Analysis</a>
       </h3>
       <p>Click here to view the project details and analysis.</p>
     </div>
   </div>
 </div>
+
 
 
 
