--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@ with cross-functional teams to design system enhancements.</li>
 	<!-- Power BI Project: SAP Cloud Analytics - ERP Simulation & Data Analysis -->
 <div class="col-md-4 d-flex ftco-animate">
   <div class="blog-entry">
-    <a href="images/Cloudanalytics.docx" class="block-20 zoom-effect" style="background-image: url('images/sap.png');" target="_blank"></a>
+    <a href="images/Cloudanalytics.docx" class="block-20 zoom-effect" style="background-image: url('images/Sap.png');" target="_blank"></a>
     <div class="text mt-3 d-block">
       <h3 class="heading">
         <a href="images/Cloudanalytics.docx" target="_blank">SAP Cloud Analytics - ERP Simulation & Data Analysis</a>
