--- a/index.html
+++ b/index.html
@@ -607,8 +607,9 @@ with cross-functional teams to design system enhancements.</li>
     <div class="text mt-3 d-block">
       <h3 class="heading">
         <a href="images/Cloudanalytics.docx" target="_blank">SAP Cloud Analytics - ERP Simulation & Data Analysis</a>
-      </h3>
-      <p>Click here to view the project details and analysis.</p>
+      </h3
+	<p> Implemented an ERP simulation analysis using SAP Cloud Analytics to extract actionable insights from sales and revenue data. Applied Benford’s Law with SAP Predictive Analytics to detect anomalies and ensure data integrity in financial reports. This project demonstrates my ability to leverage SAP tools for data-driven decision-making and accuracy.</p>      
+      <p>Click here to download the project details and analysis.</p>
     </div>
   </div>
 </div>
