--- a/index.html
+++ b/index.html
@@ -614,6 +614,20 @@ with cross-functional teams to design system enhancements.</li>
   </div>
 </div>
 
+<!-- Titanic Association Analysis Using SAP Analytics Cloud -->
+<div class="col-md-4 d-flex ftco-animate">
+  <div class="blog-entry">
+    <a href="images/Titanic Analysis.docx" class="block-20 zoom-effect" style="background-image: url('images/project24.webp');" target="_blank"></a>
+    <div class="text mt-3 d-block">
+      <h3 class="heading">
+        <a href="images/Titanic Analysis.docx" target="_blank">Conducted Titanic Association Analysis Using SAP Analytics Cloud</a>
+      </h3>
+      <p>Implemented a comprehensive association analysis using SAP Analytics Cloud (SAC) to derive insights into Titanic passenger survivability based on various characteristics. Analyzed the Titanic dataset to identify patterns in passenger class, gender, age group, and survival rates. Applied association rule mining techniques to uncover relationships between demographics and survival likelihood. The project involved generating frequent association rules, including high survival probability of second-class male children. Results were visualized using interactive bar and bubble charts, revealing significant associations through data filtering techniques.</p>
+      <p>Skills: SAP Analytics Cloud (SAC), Data Analysis, Association Rule Mining, Data Visualization, Business Intelligence (BI), Statistical Analysis.</p>
+      <p>Click here to download the project details and analysis.</p>
+    </div>
+  </div>
+</div>
 
 
 
