--- a/index.html
+++ b/index.html
@@ -622,8 +622,7 @@ with cross-functional teams to design system enhancements.</li>
       <h3 class="heading">
         <a href="images/Titanic Analysis.docx" target="_blank">Conducted Titanic Association Analysis Using SAP Analytics Cloud</a>
       </h3>
-      <p>Implemented a comprehensive association analysis using SAP Analytics Cloud (SAC) to derive insights into Titanic passenger survivability based on various characteristics. Analyzed the Titanic dataset to identify patterns in passenger class, gender, age group, and survival rates. Applied association rule mining techniques to uncover relationships between demographics and survival likelihood. The project involved generating frequent association rules, including high survival probability of second-class male children. Results were visualized using interactive bar and bubble charts, revealing significant associations through data filtering techniques.</p>
-      <p>Skills: SAP Analytics Cloud (SAC), Data Analysis, Association Rule Mining, Data Visualization, Business Intelligence (BI), Statistical Analysis.</p>
+      <p>Implemented a comprehensive association analysis using SAP Analytics Cloud (SAC) to derive insights into Titanic passenger survivability based on characteristics like class, gender, and age. The project identified frequent patterns such as the high survival probability of second-class male children. Visualization was done using bar and bubble charts to highlight rule frequencies and associations.</p>
       <p>Click here to download the project details and analysis.</p>
     </div>
   </div>
