--- a/index.html
+++ b/index.html
@@ -600,33 +600,36 @@ with cross-functional teams to design system enhancements.</li>
 		</div>
 	  </section>
 	</div>
-	<!-- Power BI Project: SAP Cloud Analytics - ERP Simulation & Data Analysis -->
-<div class="col-md-4 d-flex ftco-animate">
-  <div class="blog-entry">
-    <a href="images/Cloudanalytics.docx" class="block-20 zoom-effect" style="background-image: url('images/SAP.png');" target="_blank"></a>
-    <div class="text mt-3 d-block">
-      <h3 class="heading">
-        <a href="images/Cloudanalytics.docx" target="_blank">SAP Cloud Analytics - ERP Simulation & Data Analysis</a>
-      </h3
-	<p> Implemented an ERP simulation analysis using SAP Cloud Analytics to extract actionable insights from sales and revenue data. Applied Benford’s Law with SAP Predictive Analytics to detect anomalies and ensure data integrity in financial reports. This project demonstrates my ability to leverage SAP tools for data-driven decision-making and accuracy.</p>      
-      <p>Click here to download the project details and analysis.</p>
+	<div class="row">
+  <!-- Power BI Project: SAP Cloud Analytics - ERP Simulation & Data Analysis -->
+  <div class="col-md-6 d-flex ftco-animate">
+    <div class="blog-entry">
+      <a href="images/Cloudanalytics.docx" class="block-20 zoom-effect" style="background-image: url('images/SAP.png');" target="_blank"></a>
+      <div class="text mt-3 d-block">
+        <h3 class="heading">
+          <a href="images/Cloudanalytics.docx" target="_blank">SAP Cloud Analytics - ERP Simulation & Data Analysis</a>
+        </h3>
+        <p>Implemented an ERP simulation analysis using SAP Cloud Analytics to extract actionable insights from sales and revenue data. Applied Benford’s Law with SAP Predictive Analytics to detect anomalies and ensure data integrity in financial reports. This project demonstrates my ability to leverage SAP tools for data-driven decision-making and accuracy.</p>      
+        <p>Click here to download the project details and analysis.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Titanic Association Analysis Using SAP Analytics Cloud -->
+  <div class="col-md-6 d-flex ftco-animate">
+    <div class="blog-entry">
+      <a href="images/Titanic Analysis.docx" class="block-20 zoom-effect" style="background-image: url('images/project24.webp');" target="_blank"></a>
+      <div class="text mt-3 d-block">
+        <h3 class="heading">
+          <a href="images/Titanic Analysis.docx" target="_blank">Conducted Titanic Association Analysis Using SAP Analytics Cloud</a>
+        </h3>
+        <p>Implemented a comprehensive association analysis using SAP Analytics Cloud (SAC) to derive insights into Titanic passenger survivability based on characteristics like class, gender, and age. The project identified frequent patterns such as the high survival probability of second-class male children. Visualization was done using bar and bubble charts to highlight rule frequencies and associations.</p>
+        <p>Click here to download the project details and analysis.</p>
+      </div>
     </div>
   </div>
 </div>
 
-<!-- Titanic Association Analysis Using SAP Analytics Cloud -->
-<div class="col-md-4 d-flex ftco-animate">
-  <div class="blog-entry">
-    <a href="images/Titanic Analysis.docx" class="block-20 zoom-effect" style="background-image: url('images/project24.webp');" target="_blank"></a>
-    <div class="text mt-3 d-block">
-      <h3 class="heading">
-        <a href="images/Titanic Analysis.docx" target="_blank">Conducted Titanic Association Analysis Using SAP Analytics Cloud</a>
-      </h3>
-      <p>Implemented a comprehensive association analysis using SAP Analytics Cloud (SAC) to derive insights into Titanic passenger survivability based on characteristics like class, gender, and age. The project identified frequent patterns such as the high survival probability of second-class male children. Visualization was done using bar and bubble charts to highlight rule frequencies and associations.</p>
-      <p>Click here to download the project details and analysis.</p>
-    </div>
-  </div>
-</div>
 
 
 
