--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@ with cross-functional teams to design system enhancements.</li>
   <!-- Titanic Association Analysis Using SAP Analytics Cloud -->
   <div class="col-md-6 d-flex ftco-animate">
     <div class="blog-entry">
-      <a href="images/_Titanic Analysis.docx" class="block-20 zoom-effect" style="background-image: url('images/project24.webp');" target="_blank"></a>
+      <a href="docs/Titanic Analysis.docx" class="block-20 zoom-effect" style="background-image: url('images/project24.webp');" target="_blank"></a>
       <div class="text mt-3 d-block">
         <h3 class="heading">
           <a href="images/Titanic Analysis.docx" target="_blank">Conducted Titanic Association Analysis Using SAP Analytics Cloud</a>
