--- a/index.html
+++ b/index.html
@@ -615,17 +615,24 @@ with cross-functional teams to design system enhancements.</li>
     </div>
   </div>
 
-  <!-- Titanic Association Analysis Using SAP Analytics Cloud -->
-  <div class="col-md-6 d-flex ftco-animate">
-    <div class="blog-entry">
-      <a href="images/_TitanicAnalysis.pdf" class="block-20 zoom-effect" style="background-image: url('images/project24.webp');" target="_blank"></a>
-      <div class="text mt-3 d-block">
-        <h3 class="heading">
-          <a href="images/_TitanicAnalysis.pdf target="_blank">Conducted Titanic Association Analysis Using SAP Analytics Cloud</a>
-        </h3>
-        <p>Implemented a comprehensive association analysis using SAP Analytics Cloud (SAC) to derive insights into Titanic passenger survivability based on characteristics like class, gender, and age. The project identified frequent patterns such as the high survival probability of second-class male children. Visualization was done using bar and bubble charts to highlight rule frequencies and associations.</p>
-        <p>Click here to download the project details and analysis.</p>
-      </div>
+  <<!-- Titanic Association Analysis Using SAP Analytics Cloud -->
+<div class="col-md-6 d-flex ftco-animate">
+  <div class="blog-entry">
+    <a href="https://drive.google.com/file/d/1pVSuvrVNIuL1EAyq-Gw8vtxe1R2hgRSQ/view?usp=sharing" 
+       class="block-20 zoom-effect" 
+       style="background-image: url('images/project24.webp');" 
+       target="_blank">
+    </a>
+    <div class="text mt-3 d-block">
+      <h3 class="heading">
+        <a href="https://drive.google.com/file/d/1pVSuvrVNIuL1EAyq-Gw8vtxe1R2hgRSQ/view?usp=sharing" target="_blank">
+          Conducted Titanic Association Analysis Using SAP Analytics Cloud
+        </a>
+      </h3>
+      <p>Implemented a comprehensive association analysis using SAP Analytics Cloud (SAC) to derive insights into Titanic passenger survivability based on characteristics like class, gender, and age. The project identified frequent patterns such as the high survival probability of second-class male children. Visualization was done using bar and bubble charts to highlight rule frequencies and associations.</p>
+      <p><a href="https://drive.google.com/file/d/1pVSuvrVNIuL1EAyq-Gw8vtxe1R2hgRSQ/view?usp=sharing" target="_blank">
+        Click here to download the project details and analysis.</a>
+      </p>
     </div>
   </div>
 </div>
