--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@ with cross-functional teams to design system enhancements.</li>
       <div class="text mt-3 d-block">
         <h3 class="heading">
           <a href="https://drive.google.com/file/d/1pVSuvrVNIuL1EAyq-Gw8vtxe1R2hgRSQ/view?usp=sharing" target="_blank">
-            Conducted Titanic Association Analysis Using SAP Analytics Cloud
+            Titanic Association Analysis Using SAP Analytics Cloud
           </a>
         </h3>
         <p>Implemented a comprehensive association analysis using SAP Analytics Cloud (SAC) to derive insights into Titanic passenger survivability based on characteristics like class, gender, and age. The project identified frequent patterns such as the high survival probability of second-class male children. Visualization was done using bar and bubble charts to highlight rule frequencies and associations.</p>
@@ -651,13 +651,13 @@ with cross-functional teams to design system enhancements.</li>
     <div class="blog-entry">
       <a href="https://docs.google.com/document/d/1JAkhk-b0RsU0IRqyPAF6YmSYGEAAXoiS/edit" 
          class="block-20 zoom-effect" 
-         style="background-image: url('images/project_global_bike.webp');" 
+         style="background-image: url('images/Oppa.webp);" 
          target="_blank">
       </a>
       <div class="text mt-3 d-block">
         <h3 class="heading">
           <a href="https://docs.google.com/document/d/1JAkhk-b0RsU0IRqyPAF6YmSYGEAAXoiS/edit" target="_blank">
-            Conducted Global Bike Sales Analysis Using SAP Analytics Cloud
+             Global Bike Sales Analysis Using SAP Analytics Cloud
           </a>
         </h3>
         <p>Leveraged SAP Analytics Cloud (SAC) to create an interactive dashboard for analyzing Global Bike Inc.'s sales data, uncovering sales trends and customer segmentation. The project included k-means clustering for identifying high-value customer groups and calculated measures for discount impact analysis.</p>
