--- a/index.html
+++ b/index.html
@@ -646,27 +646,26 @@ with cross-functional teams to design system enhancements.</li>
     </div>
   </div>
 
-  <!-- Global Bike Sales Analysis Using SAP Analytics Cloud -->
-  <div class="col-md-4 d-flex ftco-animate">
-    <div class="blog-entry">
-      <a href="https://docs.google.com/document/d/1JAkhk-b0RsU0IRqyPAF6YmSYGEAAXoiS/edit" 
-         class="block-20 zoom-effect" 
-         style="background-image: url('images/Oppa.webp);" 
-         target="_blank">
-      </a>
-      <div class="text mt-3 d-block">
-        <h3 class="heading">
-          <a href="https://docs.google.com/document/d/1JAkhk-b0RsU0IRqyPAF6YmSYGEAAXoiS/edit" target="_blank">
-             Global Bike Sales Analysis Using SAP Analytics Cloud
-          </a>
-        </h3>
-        <p>Leveraged SAP Analytics Cloud (SAC) to create an interactive dashboard for analyzing Global Bike Inc.'s sales data, uncovering sales trends and customer segmentation. The project included k-means clustering for identifying high-value customer groups and calculated measures for discount impact analysis.</p>
-        <p>
-          <a href="https://docs.google.com/document/d/1JAkhk-b0RsU0IRqyPAF6YmSYGEAAXoiS/edit" target="_blank">
-            Click here to download the project details and analysis.
-          </a>
-        </p>
-      </div>
+<!-- Global Bike Sales Analysis Using SAP Analytics Cloud -->
+<div class="col-md-4 d-flex ftco-animate">
+  <div class="blog-entry">
+    <a href="https://docs.google.com/document/d/1JAkhk-b0RsU0IRqyPAF6YmSYGEAAXoiS/edit" 
+       class="block-20 zoom-effect" 
+       style="background-image: url('images/Oppa.webp');" 
+       target="_blank">
+    </a>
+    <div class="text mt-3 d-block">
+      <h3 class="heading">
+        <a href="https://docs.google.com/document/d/1JAkhk-b0RsU0IRqyPAF6YmSYGEAAXoiS/edit" target="_blank">
+           Global Bike Sales Analysis Using SAP Analytics Cloud
+        </a>
+      </h3>
+      <p>Leveraged SAP Analytics Cloud (SAC) to create an interactive dashboard for analyzing Global Bike Inc.'s sales data, uncovering sales trends and customer segmentation. The project included k-means clustering for identifying high-value customer groups and calculated measures for discount impact analysis.</p>
+      <p>
+        <a href="https://docs.google.com/document/d/1JAkhk-b0RsU0IRqyPAF6YmSYGEAAXoiS/edit" target="_blank">
+          Click here to download the project details and analysis.
+        </a>
+      </p>
     </div>
   </div>
 </div>
