--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@ with cross-functional teams to design system enhancements.</li>
     </div>
   </div>
 </div>
-
+<section>
   
 	<!-- Craft Haven E-Commerce Platform -->
 <div class="col-md-4 d-flex ftco-animate">
@@ -694,7 +694,7 @@ with cross-functional teams to design system enhancements.</li>
     </div>
   </div>
 </div>
-
+</section>
   
 
 	<section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
