--- a/index.html
+++ b/index.html
@@ -821,8 +821,7 @@ with cross-functional teams to design system enhancements.</li>
 		   </div>
    </div>
  </section>
-
-
+<section>
  
 	
     <footer class="ftco-footer ftco-section">
@@ -837,7 +836,7 @@ with cross-functional teams to design system enhancements.</li>
 		  </div>
 		</div>
 	  </footer>
-
+</section>
 
   <!-- loader -->
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
