--- a/index.html
+++ b/index.html
@@ -724,7 +724,32 @@ with cross-functional teams to design system enhancements.</li>
 		</div>
 	</section>
 
-
+<section>
+  
+	<!-- Craft Haven E-Commerce Platform -->
+<div class="col-md-4 d-flex ftco-animate">
+  <div class="blog-entry">
+    <a href="https://drive.google.com/drive/folders/15HF3-yUl1w1EOvhOvSBYZObbx8bK8Y3h" 
+       class="block-20 zoom-effect" 
+       style="background-image: url('images/craft-haven.webp');" 
+       target="_blank">
+    </a>
+    <div class="text mt-3 d-block">
+      <h3 class="heading">
+        <a href="https://drive.google.com/drive/folders/15HF3-yUl1w1EOvhOvSBYZObbx8bK8Y3h" target="_blank">
+          Craft Haven - E-Commerce Platform for Handmade Crafts
+        </a>
+      </h3>
+      <p>Craft Haven is an e-commerce platform designed to connect artisans with customers seeking unique, handcrafted products. It provides a user-friendly shopping experience while empowering independent creators to expand their reach. The platform features seamless product listings, secure transactions, and personalized recommendations to enhance user engagement.</p>
+      <p>
+        <a href="https://drive.google.com/drive/folders/15HF3-yUl1w1EOvhOvSBYZObbx8bK8Y3h" target="_blank">
+          Click here to access the project details and analysis.
+        </a>
+      </p>
+    </div>
+  </div>
+</div>
+</section>
 
     <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
       <div class="container">
