--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@ with cross-functional teams to design system enhancements.</li>
   <div class="blog-entry">
     <a href="https://docs.google.com/document/d/1JAkhk-b0RsU0IRqyPAF6YmSYGEAAXoiS/edit" 
        class="block-20 zoom-effect" 
-       style="background-image: url('images/Oppa.webp');" 
+       style="background-image: url('images/globalbike.webp');" 
        target="_blank">
     </a>
     <div class="text mt-3 d-block">
