--- a/index.html
+++ b/index.html
@@ -856,6 +856,10 @@ with cross-functional teams to design system enhancements.</li>
   <script src="js/scrollax.min.js"></script>
   
   <script src="js/main.js"></script>
+	<div id="app">
+  <bot-ui></bot-ui>
+</div>
+
     
   </body>
 	<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
