--- a/index.html
+++ b/index.html
@@ -696,6 +696,72 @@ with cross-functional teams to design system enhancements.</li>
 </div>
 </section>
 
+<!-- Volunteer Section Start -->
+<section class="ftco-section" id="volunteering-section">
+  <div class="container">
+    <div class="row justify-content-center mb-5 pb-5">
+      <div class="col-md-7 heading-section text-center ftco-animate">
+        <h1 class="big big-2">Volunteering</h1>
+        <h2 class="mb-4">Educational Leadership Activities</h2>
+        <p>Empowering students with cybersecurity, digital literacy, and leadership skills as part of the AT&T Foundation's Bridging the Digital Divide initiative at Lamar University.</p>
+      </div>
+    </div>
+
+    <div class="row d-flex">
+
+      <!-- Activity 1 -->
+      <div class="col-md-6 d-flex ftco-animate">
+        <div class="blog-entry justify-content-end">
+          <a href="images/att.1znBC3snMhlFJUenGO81RliXGPntBRhZB8beSfuSenw.JPG" class="block-20 zoom-effect" style="background-image: url('images/att.1znBC3snMhlFJUenGO81RliXGPntBRhZB8beSfuSenw.JPG');"></a>
+          <div class="text mt-3 d-block">
+            <h3 class="heading">Interactive Cybersecurity Session</h3>
+            <p>Guided students to create strong passwords and understand web development basics by personalizing their school website title, sparking interest in digital literacy.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Activity 2 -->
+      <div class="col-md-6 d-flex ftco-animate">
+        <div class="blog-entry justify-content-end">
+          <a href="images/att.EP46xSqqH6WLR4Kp4Any_80zi0PW0Q_oBpaK2w4Js3k.JPG" class="block-20 zoom-effect" style="background-image: url('images/att.EP46xSqqH6WLR4Kp4Any_80zi0PW0Q_oBpaK2w4Js3k.JPG');"></a>
+          <div class="text mt-3 d-block">
+            <h3 class="heading">Leadership & Community Engagement</h3>
+            <p>Organized and facilitated educational activities, enhancing leadership and mentorship skills through collaboration with school faculty and peers.</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="row d-flex mt-5">
+
+      <!-- Activity 3 -->
+      <div class="col-md-6 d-flex ftco-animate">
+        <div class="blog-entry justify-content-end">
+          <a href="images/att.ieF3nWVjrYpm0xA5-_p3vMphkT0cZBoquPzd-FItvyg.JPG" class="block-20 zoom-effect" style="background-image: url('images/att.ieF3nWVjrYpm0xA5-_p3vMphkT0cZBoquPzd-FItvyg.JPG');"></a>
+          <div class="text mt-3 d-block">
+            <h3 class="heading">Hands-on Learning Projects</h3>
+            <p>Assisted in water cycle experiments and educational demos, helping young students understand science concepts in a fun, practical way.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Activity 4 -->
+      <div class="col-md-6 d-flex ftco-animate">
+        <div class="blog-entry justify-content-end">
+          <a href="images/att.jU-vnQCtS34aojcg4xB-YmpaiuT1POT5qfsNFozmVwE.JPG" class="block-20 zoom-effect" style="background-image: url('images/att.jU-vnQCtS34aojcg4xB-YmpaiuT1POT5qfsNFozmVwE.JPG');"></a>
+          <div class="text mt-3 d-block">
+            <h3 class="heading">Introduction to Website Structure</h3>
+            <p>Taught students the basics of web page layout, showing how website titles can be edited and encouraging early exploration of coding and IT skills.</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+</section>
+<!-- Volunteer Section End -->
 
 	<section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
       <div class="container">
