--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
 	          <li class="nav-item"><a href="#project-section" class="nav-link"><span>Projects</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
+		  <li class="nav-item"><a href="#volunteering-section" class="nav-link"><span>Volunteering</span></a></li>
+
 	        </ul>
 	      </div>
 	    </div>
