--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@ with cross-functional teams to design system enhancements.</li>
       <!-- Activity 1 -->
       <div class="col-md-6 d-flex ftco-animate">
         <div class="blog-entry justify-content-end">
-          <a href="images/att.1znBC3snMhlFJUenGO81RliXGPntBRhZB8beSfuSenw.JPG" class="block-20 zoom-effect" style="background-image: url('images/att.1znBC3snMhlFJUenGO81RliXGPntBRhZB8beSfuSenw.JPG');"></a>
+          <a href="images/damon.JPG" class="block-20 zoom-effect" style="background-image: url('images/att.1znBC3snMhlFJUenGO81RliXGPntBRhZB8beSfuSenw.JPG');"></a>
           <div class="text mt-3 d-block">
             <h3 class="heading">Interactive Cybersecurity Session</h3>
             <p>Guided students to create strong passwords and understand web development basics by personalizing their school website title, sparking interest in digital literacy.</p>
