--- a/index.html
+++ b/index.html
@@ -712,15 +712,16 @@ with cross-functional teams to design system enhancements.</li>
     <div class="row d-flex">
 
       <!-- Activity 1 -->
-      <div class="col-md-6 d-flex ftco-animate">
-        <div class="blog-entry justify-content-end">
-          <a href="images/damon.JPG" class="block-20 zoom-effect" style="background-image: url('images/damon.JPG');"></a>
-          <div class="text mt-3 d-block">
-            <h3 class="heading">Interactive Cybersecurity Session</h3>
-            <p>Guided students to create strong passwords and understand web development basics by personalizing their school website title, sparking interest in digital literacy.</p>
-          </div>
-        </div>
-      </div>
+     <div class="col-md-6 d-flex ftco-animate">
+  <div class="blog-entry justify-content-end">
+    <a href="images/damon.JPG" class="block-20 zoom-effect" style="background-image: url('images/damon.JPG');"></a>
+    <div class="text mt-3 d-block">
+      <h3 class="heading">Interactive Cybersecurity Session</h3>
+      <p>Guided students to create strong passwords and personalize the school website title, sparking early interest in digital literacy.</p>
+    </div>
+  </div>
+</div>
+
 
       <!-- Activity 2 -->
       <div class="col-md-6 d-flex ftco-animate">
