--- a/index.html
+++ b/index.html
@@ -712,15 +712,17 @@ with cross-functional teams to design system enhancements.</li>
     <div class="row d-flex">
 
       <!-- Activity 1 -->
-     <div class="col-md-6 d-flex ftco-animate">
+    <div class="col-md-6 d-flex ftco-animate">
   <div class="blog-entry justify-content-end">
-    <a href="images/damon.JPG" class="block-20 zoom-effect" style="background-image: url('images/damon.JPG');"></a>
+    <a href="images/Screenshot 2025-04-19 at 5.58.51 PM.png" class="block-20 zoom-effect" style="background-image: url('images/Screenshot 2025-04-19 at 5.58.51 PM.png'); background-size: cover; background-position: center center;">
+    </a>
     <div class="text mt-3 d-block">
       <h3 class="heading">Interactive Cybersecurity Session</h3>
-      <p>Guided students to create strong passwords and personalize the school website title, sparking early interest in digital literacy.</p>
+      <p>Guided students through an interactive session on creating strong passwords and exploring web development by modifying their school website's title.</p>
     </div>
   </div>
 </div>
+
 
 
       <!-- Activity 2 -->
