--- a/index.html
+++ b/index.html
@@ -714,11 +714,12 @@ with cross-functional teams to design system enhancements.</li>
       <!-- Activity 1 -->
     <div class="col-md-6 d-flex ftco-animate">
   <div class="blog-entry justify-content-end">
-    <a href="images/Screenshot 2025-04-19 at 5.58.51 PM.png" class="block-20 zoom-effect" style="background-image: url('images/Screenshot 2025-04-19 at 5.58.51 PM.png'); background-size: cover; background-position: center center;">
+    <a href="images/damon.JPG" class="block-20 zoom-effect" 
+       style="background-image: url('images/damon.JPG'); background-size: cover; background-position: center center; background-repeat: no-repeat; height: 300px;">
     </a>
     <div class="text mt-3 d-block">
       <h3 class="heading">Interactive Cybersecurity Session</h3>
-      <p>Guided students through an interactive session on creating strong passwords and exploring web development by modifying their school website's title.</p>
+      <p>Guided students to explore digital literacy by changing the school website title, introducing them to the basics of web development and cybersecurity fundamentals.</p>
     </div>
   </div>
 </div>
