--- a/index.html
+++ b/index.html
@@ -718,8 +718,8 @@ with cross-functional teams to design system enhancements.</li>
        style="background-image: url('images/damon.JPG'); background-size: cover; background-position: center center; background-repeat: no-repeat; height: 300px;">
     </a>
     <div class="text mt-3 d-block">
-      <h3 class="heading">Interactive Cybersecurity Session</h3>
-      <p>Guided students to explore digital literacy by changing the school website title, introducing them to the basics of web development and cybersecurity fundamentals.</p>
+      <h3 class="heading">Cybersecurity Session at Martin Elementary</h3>
+      <p>On February 9, 2024, we conducted a hands-on cybersecurity session at Martin Elementary School, teaching students how to create strong passwords by focusing on the importance of using uppercase letters, lowercase letters, numbers, and special characters. To make learning interactive and fun, I demonstrated how students could temporarily personalize their school website by changing the title to their own names, introducing them to the basics of website development and understanding web page structures.</p>
     </div>
   </div>
 </div>
