--- a/index.html
+++ b/index.html
@@ -727,17 +727,18 @@ with cross-functional teams to design system enhancements.</li>
 
 
       <!-- Activity 2 -->
-      <div class="col-md-6 d-flex ftco-animate">
-        <div class="blog-entry justify-content-end">
-          <a href="images/att.EP46xSqqH6WLR4Kp4Any_80zi0PW0Q_oBpaK2w4Js3k.JPG" class="block-20 zoom-effect" style="background-image: url('images/att.EP46xSqqH6WLR4Kp4Any_80zi0PW0Q_oBpaK2w4Js3k.JPG');"></a>
-          <div class="text mt-3 d-block">
-            <h3 class="heading">Leadership & Community Engagement</h3>
-            <p>Organized and facilitated educational activities, enhancing leadership and mentorship skills through collaboration with school faculty and peers.</p>
-          </div>
-        </div>
-      </div>
-
+     <div class="col-md-6 d-flex ftco-animate">
+  <div class="blog-entry justify-content-end">
+    <a href="images/photosynthesis.JPG" class="block-20 zoom-effect" 
+       style="background-image: url('images/photosynthesis.JPG'); background-size: cover; background-position: center center; background-repeat: no-repeat; height: 300px;">
+    </a>
+    <div class="text mt-3 d-block">
+      <h3 class="heading">Leadership & Community Engagement</h3>
+      <p>Organized and facilitated educational activities during the Bridging the Digital Divide event, helping students learn through experiments like the water cycle demonstration, while strengthening leadership and mentorship skills through collaboration with school faculty and peers.</p>
     </div>
+  </div>
+</div>
+
 
     <div class="row d-flex mt-5">
 
