--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@ with cross-functional teams to design system enhancements.</li>
     <div class="col-md-6 d-flex ftco-animate">
   <div class="blog-entry justify-content-end">
     <a href="images/photosynthesis.JPG" class="block-20 zoom-effect" 
-       style="background-image: url('images/photosynthesis.JPG'); background-size: cover; background-position: center 55%; background-repeat: no-repeat; height: 300px;">
+       style="background-image: url('images/photosynthesis.jpg'); background-size: cover; background-position: center 55%; background-repeat: no-repeat; height: 300px;">
     </a>
     <div class="text mt-3 d-block">
       <h3 class="heading">Leadership & Community Engagement</h3>
