--- a/index.html
+++ b/index.html
@@ -743,15 +743,18 @@ with cross-functional teams to design system enhancements.</li>
     <div class="row d-flex mt-5">
 
       <!-- Activity 3 -->
-      <div class="col-md-6 d-flex ftco-animate">
-        <div class="blog-entry justify-content-end">
-          <a href="images/att.ieF3nWVjrYpm0xA5-_p3vMphkT0cZBoquPzd-FItvyg.JPG" class="block-20 zoom-effect" style="background-image: url('images/att.ieF3nWVjrYpm0xA5-_p3vMphkT0cZBoquPzd-FItvyg.JPG');"></a>
-          <div class="text mt-3 d-block">
-            <h3 class="heading">Hands-on Learning Projects</h3>
-            <p>Assisted in water cycle experiments and educational demos, helping young students understand science concepts in a fun, practical way.</p>
-          </div>
-        </div>
-      </div>
+<div class="col-md-6 d-flex ftco-animate">
+  <div class="blog-entry justify-content-end">
+    <a href="images/Lamar.JPG" class="block-20 zoom-effect" 
+       style="background-image: url('images/Lamar.JPG'); background-size: cover; background-position: center center; background-repeat: no-repeat; height: 300px;">
+    </a>
+    <div class="text mt-3 d-block">
+      <h3 class="heading">Bridging the Digital Divide Member – Lamar University</h3>
+      <p>Actively contributed as a Bridging the Digital Divide (BDD) team member at Lamar University, supporting community outreach programs focused on digital literacy, technology education, and student empowerment. Collaborated with a diverse group to organize hands-on events, helping bridge the technology gap for K-12 students and promote educational equity.</p>
+    </div>
+  </div>
+</div>
+
 
       <!-- Activity 4 -->
       <div class="col-md-6 d-flex ftco-animate">
