--- a/index.html
+++ b/index.html
@@ -742,9 +742,9 @@ with cross-functional teams to design system enhancements.</li>
 
     <div class="row d-flex mt-5">
 
-      <!-- Activity 3 -->
+   <!-- Activity 3 -->
 <div class="col-md-6 d-flex ftco-animate">
-  <div class="blog-entry justify-content-end">
+  <div class="blog-entry justify-content-end" style="padding: 10px;">
     <a href="images/Lamar.JPG" class="block-20 zoom-effect" 
        style="background-image: url('images/Lamar.JPG'); background-size: cover; background-position: center center; background-repeat: no-repeat; height: 300px;">
     </a>
