--- a/index.html
+++ b/index.html
@@ -757,19 +757,18 @@ with cross-functional teams to design system enhancements.</li>
 
 
       <!-- Activity 4 -->
-      <div class="col-md-6 d-flex ftco-animate">
-        <div class="blog-entry justify-content-end">
-          <a href="images/att.jU-vnQCtS34aojcg4xB-YmpaiuT1POT5qfsNFozmVwE.JPG" class="block-20 zoom-effect" style="background-image: url('images/att.jU-vnQCtS34aojcg4xB-YmpaiuT1POT5qfsNFozmVwE.JPG');"></a>
-          <div class="text mt-3 d-block">
-            <h3 class="heading">Introduction to Website Structure</h3>
-            <p>Taught students the basics of web page layout, showing how website titles can be edited and encouraging early exploration of coding and IT skills.</p>
-          </div>
-        </div>
-      </div>
-
+<div class="col-md-6 d-flex ftco-animate">
+  <div class="blog-entry justify-content-end">
+    <a href="images/macbook.png" class="block-20 zoom-effect" 
+       style="background-image: url('images/macbook.png'); background-size: cover; background-position: center center; background-repeat: no-repeat; height: 300px;">
+    </a>
+    <div class="text mt-3 d-block">
+      <h3 class="heading">Introduction to Website Structure</h3>
+      <p>Taught elementary students the basics of web page layout by showing how website titles can be edited. Encouraged early exploration of coding, digital literacy, and IT skills, sparking curiosity and excitement for technology at a young age.</p>
     </div>
-
   </div>
+</div>
+
 </section>
 <!-- Volunteer Section End -->
 
