--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@ with cross-functional teams to design system enhancements.</li>
 
 
     <div class="row d-flex mt-5">
-
+<div class="row justify-content-center">
    <!-- Activity 3 -->
 <div class="col-md-6 d-flex ftco-animate">
   <div class="blog-entry justify-content-end" style="padding: 10px;">
@@ -768,7 +768,7 @@ with cross-functional teams to design system enhancements.</li>
     </div>
   </div>
 </div>
-
+</div>
 </section>
 <!-- Volunteer Section End -->
 
